--- a/Salesstatic/res/layout/activity_main.xml
+++ b/Salesstatic/res/layout/activity_main.xml
@@ -14,6 +14,35 @@
         android:id="@+id/main_total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/main_total"
+        android:layout_marginTop="10dp" />
+    
+    <Button
+        android:id="@+id/main_sales"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_sales"
+        android:layout_marginTop="10dp" />
+    
+    <Button
+        android:id="@+id/main_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_search"
+        android:layout_marginTop="10dp" />
+    
+    <Button
+        android:id="@+id/main_purchase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_purchase"
+        android:layout_marginTop="10dp" />
+    
+    <Button
+        android:id="@+id/main_error_entry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_error_entry"
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
