--- a/Salesstatic/res/layout/activity_search.xml
+++ b/Salesstatic/res/layout/activity_search.xml
@@ -9,7 +9,41 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="5dp"
+                    android:text="@string/sales_customer"
+                    android:textSize="16sp" />
+
+                <AutoCompleteTextView
+                    android:id="@+id/search_customer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="5dp"
+                    android:text="@string/sales_name"
+                    android:textSize="16sp" />
+
+                <AutoCompleteTextView
+                    android:id="@+id/search_merchandise"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
             <TableLayout
                 android:layout_width="wrap_content"
@@ -18,6 +52,7 @@
                 <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >
+
                     <TextView />
                 </TableRow>
             </TableLayout>
