基本实现搜索功能

--- a/Salesstatic/res/layout/activity_search.xml
+++ b/Salesstatic/res/layout/activity_search.xml
@@ -84,6 +84,7 @@
                         android:layout_marginTop="5dp"
                         android:gravity="center"
                         android:text="@string/sales_name"
+                        android:textColor="#000"
                         android:textSize="23sp" />
 
                     <TextView
@@ -94,6 +95,7 @@
                         android:layout_marginTop="5dp"
                         android:gravity="center"
                         android:text="@string/sales_customer"
+                        android:textColor="#000"
                         android:textSize="23sp" />
 
                     <TextView
@@ -104,6 +106,18 @@
                         android:layout_marginTop="5dp"
                         android:gravity="center"
                         android:text="@string/sales_nums"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/sales_price"
+                        android:textColor="#000"
                         android:textSize="23sp" />
 
                     <TextView
@@ -114,6 +128,7 @@
                         android:layout_marginTop="5dp"
                         android:gravity="center"
                         android:text="@string/time"
+                        android:textColor="#000"
                         android:textSize="23sp" />
                 </TableRow>
             </TableLayout>
