--- a/Salesstatic/res/layout/activity_main.xml
+++ b/Salesstatic/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#3cffffff"
+        android:padding="10dp"
         android:text="@string/main_total" />
 
     <Button
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#3cffffff"
+        android:padding="10dp"
         android:text="@string/main_search" />
 
     <Button
@@ -33,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#3cffffff"
+        android:padding="10dp"
         android:text="@string/main_sales" />
 
     <Button
@@ -41,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#3cffffff"
+        android:padding="10dp"
         android:text="@string/main_purchase" />
 
     <Button
@@ -49,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="#3cffffff"
+        android:padding="10dp"
         android:text="@string/main_entry" />
 
 </LinearLayout>
