--- a/Salesstatic/res/layout/activity_search.xml
+++ b/Salesstatic/res/layout/activity_search.xml
@@ -1,138 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:fillViewport="true" >
 
-    <HorizontalScrollView
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal" >
 
-            <LinearLayout
+            <AutoCompleteTextView
+                android:id="@+id/search_customer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal" >
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:hint="@string/search_customer"
+                android:textSize="16sp" />
 
-                <AutoCompleteTextView
-                    android:id="@+id/search_customer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:hint="@string/search_customer"
-                    android:textSize="16sp" />
+            <AutoCompleteTextView
+                android:id="@+id/search_merchandise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:hint="@string/search_merchandise"
+                android:textSize="16sp" />
 
-                <AutoCompleteTextView
-                    android:id="@+id/search_merchandise"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:hint="@string/search_merchandise"
-                    android:textSize="16sp" />
+            <EditText
+                android:id="@+id/search_starttime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:hint="@string/search_starttime"
+                android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/search_starttime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:hint="@string/search_starttime"
-                    android:textSize="16sp" />
+            <EditText
+                android:id="@+id/search_endtime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:hint="@string/search_endtime"
+                android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/search_endtime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:hint="@string/search_endtime"
-                    android:textSize="16sp" />
+            <Button
+                android:id="@+id/search_ok"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/search_ok"
+                android:textSize="16sp" >
+            </Button>
+        </LinearLayout>
 
-                <Button
-                    android:id="@+id/search_ok"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text="@string/search_ok"
-                    android:textSize="16sp" >
-                </Button>
-            </LinearLayout>
+        <TableLayout
+            android:id="@+id/search_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
 
-            <TableLayout
-                android:id="@+id/search_parent"
+            <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/sales_name"
+                    android:textColor="#000"
+                    android:textSize="23sp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center"
-                        android:text="@string/sales_name"
-                        android:textColor="#000"
-                        android:textSize="23sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/sales_customer"
+                    android:textColor="#000"
+                    android:textSize="23sp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center"
-                        android:text="@string/sales_customer"
-                        android:textColor="#000"
-                        android:textSize="23sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/sales_nums"
+                    android:textColor="#000"
+                    android:textSize="23sp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center"
-                        android:text="@string/sales_nums"
-                        android:textColor="#000"
-                        android:textSize="23sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/sales_price"
+                    android:textColor="#000"
+                    android:textSize="23sp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center"
-                        android:text="@string/sales_price"
-                        android:textColor="#000"
-                        android:textSize="23sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="@string/time"
+                    android:textColor="#000"
+                    android:textSize="23sp" />
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center"
-                        android:text="@string/time"
-                        android:textColor="#000"
-                        android:textSize="23sp" />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
-    </HorizontalScrollView>
-
-</ScrollView>
+</HorizontalScrollView>
