--- a/Salesstatic/res/layout/activity_purchase.xml
+++ b/Salesstatic/res/layout/activity_purchase.xml
@@ -87,6 +87,27 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal" />
             </TableRow>
+            
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:gravity="right"
+                    android:text="@string/purchase_sell_price"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/purchase_sell_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
