--- a/Salesstatic/res/layout/activity_total.xml
+++ b/Salesstatic/res/layout/activity_total.xml
@@ -9,93 +9,130 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TableLayout
-            android:id="@+id/total_parent"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-            <TableRow
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/total_sales_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:textColor="#000"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/total_purchase_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:textColor="#000"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TableLayout
+                android:id="@+id/total_parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
-                <TextView
-                    android:id="@+id/total_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="@string/total_name"
-                    android:textSize="23sp" />
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
 
-                <TextView
-                    android:id="@+id/total_purchase"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="@string/total_purchase"
-                    android:textSize="23sp" />
+                    <TextView
+                        android:id="@+id/total_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/total_name"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
 
-                <TextView
-                    android:id="@+id/total_sales"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="@string/total_sales"
-                    android:textSize="23sp" />
+                    <TextView
+                        android:id="@+id/total_purchase"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/total_purchase"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
 
-                <TextView
-                    android:id="@+id/total_inventory"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="@string/total_inventory"
-                    android:textSize="23sp" />
+                    <TextView
+                        android:id="@+id/total_sales"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/total_sales"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
 
-                <TextView
-                    android:id="@+id/total_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="@string/total_price"
-                    android:textSize="23sp" />
+                    <TextView
+                        android:id="@+id/total_inventory"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/total_inventory"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
 
-                <TextView
-                    android:id="@+id/total_standard"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="@string/total_standard"
-                    android:textSize="23sp" />
+                    <TextView
+                        android:id="@+id/total_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/total_price"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
 
-                <TextView
-                    android:id="@+id/total_instruction"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="@string/total_instruction"
-                    android:textSize="23sp" />
-            </TableRow>
-        </TableLayout>
+                    <TextView
+                        android:id="@+id/total_standard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/total_standard"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
+
+                    <TextView
+                        android:id="@+id/total_instruction"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="@string/total_instruction"
+                        android:textColor="#000"
+                        android:textSize="23sp" />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
     </HorizontalScrollView>
 
 </ScrollView>
