--- a/Salesstatic/res/layout/total_item.xml
+++ b/Salesstatic/res/layout/total_item.xml
@@ -11,6 +11,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="23sp" />
 
     <TextView
@@ -21,6 +22,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="23sp" />
 
     <TextView
@@ -31,6 +33,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="23sp" />
 
     <TextView
@@ -41,6 +44,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="23sp" />
 
     <TextView
@@ -51,6 +55,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="23sp" />
 
     <TextView
@@ -61,6 +66,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="23sp" />
 
     <TextView
@@ -71,6 +77,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="#000"
         android:textSize="23sp" />
 
 </TableRow>
